--- a/src/table/index.html
+++ b/src/table/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Table</title>
 </head>
-<body>
-  <canvas id="canvas" width="1000" height="1000"></canvas>
-  <canvas id="webgl" width="1000" height="1000"></canvas>
+<body style="margin: 0;">
+  <!-- <canvas id="canvas" width="1000" height="1000"></canvas>
+  <canvas id="webgl" width="1000" height="1000"></canvas> -->
   <!-- <script src="main.js" async defer></script> -->
-  <script src="webgl.js" async defer></script>
+  <canvas id="table"></canvas>
+  <script src="canvas.js" async defer></script>
 </body>
 </html>
